:atom: Fix-It Felix: Squashed bugs and added enhancements

--- a/src/components/thoughts/thought-teaser.css
+++ b/src/components/thoughts/thought-teaser.css
@@ -55,7 +55,7 @@ body.dark {
     border-radius: 5px;
 }
 
-.thought-item .article-header .new-badge {
+.thought-item .thought-header .new-badge {
     position: absolute;
     top: -10px;
     right: -10px;
